use development port under 10000 to avoid conflict with docker

--- a/src/License.Manager/Web.config
+++ b/src/License.Manager/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -19,14 +19,14 @@
     <!--<add key="Raven/AnonymousAccess" value="All" />-->
 
     <!-- Provide explicit urls to work around hosting on internal ports preventing correct redirects -->
-    <!--<add key="oauth.GoogleOpenId.RedirectUrl" value="http://localhost:49905/" />-->
-    <!--<add key="oauth.GoogleOpenId.CallbackUrl" value="http://localhost:49905/api/auth/GoogleOpenId" />-->
-    <!--<add key="oauth.YahooOpenId.RedirectUrl" value="http://localhost:49905/" />-->
-    <!--<add key="oauth.YahooOpenId.CallbackUrl" value="http://localhost:49905/api/auth/YahooOpenId" />-->
-    <!--<add key="oauth.MyOpenId.RedirectUrl" value="http://localhost:49905/" />-->
-    <!--<add key="oauth.MyOpenId.CallbackUrl" value="http://localhost:49905/api/auth/MyOpenId" />-->
-    <!--<add key="oauth.OpenId.RedirectUrl" value="http://localhost:49905/" />-->
-    <!--<add key="oauth.OpenId.CallbackUrl" value="http://localhost:49905/api/auth/OpenId" />-->
+    <!--<add key="oauth.GoogleOpenId.RedirectUrl" value="http://localhost:9909/" />-->
+    <!--<add key="oauth.GoogleOpenId.CallbackUrl" value="http://localhost:9909/api/auth/GoogleOpenId" />-->
+    <!--<add key="oauth.YahooOpenId.RedirectUrl" value="http://localhost:9909/" />-->
+    <!--<add key="oauth.YahooOpenId.CallbackUrl" value="http://localhost:9909/api/auth/YahooOpenId" />-->
+    <!--<add key="oauth.MyOpenId.RedirectUrl" value="http://localhost:9909/" />-->
+    <!--<add key="oauth.MyOpenId.CallbackUrl" value="http://localhost:9909/api/auth/MyOpenId" />-->
+    <!--<add key="oauth.OpenId.RedirectUrl" value="http://localhost:9909/" />-->
+    <!--<add key="oauth.OpenId.CallbackUrl" value="http://localhost:9909/api/auth/OpenId" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
