move Raven to a less popular port

--- a/src/License.Manager/Web.config
+++ b/src/License.Manager/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,7 +13,7 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="Raven/Port" value="8080" />
+    <add key="Raven/Port" value="9880" />
     <!--<add key="Raven/VirtualDirectory" value="/" />-->
     <add key="Raven/DataDir" value="~\App_Data\License.Manager.db" />
     <!--<add key="Raven/AnonymousAccess" value="All" />-->
